fix: reduce the row gap between shortcuts

--- a/chrome/content/newtab-shortcuts.css
+++ b/chrome/content/newtab-shortcuts.css
@@ -1,6 +1,10 @@
 @-moz-document url-prefix("about:newtab"), 
 url-prefix("about:home"), 
 url-prefix("about:firefoxview") {
+	.top-sites-list {
+		row-gap: 0 !important;
+	}
+
 	.top-site-outer {
 		--foxkit-tile-radius: 12px;
 		--foxkit-tile-icon-size: 32px;
